syntax = "proto3";

package sfc_generaltemplate;

option csharp_namespace = "SFC.GeneralTemplate.Contracts.Messages.GeneralTemplate.Data.GetAll";

message GetAllGeneralTemplateDataRequest{}